--- a/100_Numpy_exercises.ipynb
+++ b/100_Numpy_exercises.ipynb
@@ -670,56 +670,6 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "np.random.seed(42)\n",
-        "x = np.random.rand(10,10)\n",
-        "# print(\"Minimum value:\", np.min(x))\n",
-        "# print(\"Maximum value:\", np.max(x))\n",
-        "x"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "O8i9-9aQf0bo",
-        "outputId": "858aff11-9fe4-49e7-e25a-5b2f70b2ed17"
-      },
-      "id": "O8i9-9aQf0bo",
-      "execution_count": 55,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0.37454012, 0.95071431, 0.73199394, 0.59865848, 0.15601864,\n",
-              "        0.15599452, 0.05808361, 0.86617615, 0.60111501, 0.70807258],\n",
-              "       [0.02058449, 0.96990985, 0.83244264, 0.21233911, 0.18182497,\n",
-              "        0.18340451, 0.30424224, 0.52475643, 0.43194502, 0.29122914],\n",
-              "       [0.61185289, 0.13949386, 0.29214465, 0.36636184, 0.45606998,\n",
-              "        0.78517596, 0.19967378, 0.51423444, 0.59241457, 0.04645041],\n",
-              "       [0.60754485, 0.17052412, 0.06505159, 0.94888554, 0.96563203,\n",
-              "        0.80839735, 0.30461377, 0.09767211, 0.68423303, 0.44015249],\n",
-              "       [0.12203823, 0.49517691, 0.03438852, 0.9093204 , 0.25877998,\n",
-              "        0.66252228, 0.31171108, 0.52006802, 0.54671028, 0.18485446],\n",
-              "       [0.96958463, 0.77513282, 0.93949894, 0.89482735, 0.59789998,\n",
-              "        0.92187424, 0.0884925 , 0.19598286, 0.04522729, 0.32533033],\n",
-              "       [0.38867729, 0.27134903, 0.82873751, 0.35675333, 0.28093451,\n",
-              "        0.54269608, 0.14092422, 0.80219698, 0.07455064, 0.98688694],\n",
-              "       [0.77224477, 0.19871568, 0.00552212, 0.81546143, 0.70685734,\n",
-              "        0.72900717, 0.77127035, 0.07404465, 0.35846573, 0.11586906],\n",
-              "       [0.86310343, 0.62329813, 0.33089802, 0.06355835, 0.31098232,\n",
-              "        0.32518332, 0.72960618, 0.63755747, 0.88721274, 0.47221493],\n",
-              "       [0.11959425, 0.71324479, 0.76078505, 0.5612772 , 0.77096718,\n",
-              "        0.4937956 , 0.52273283, 0.42754102, 0.02541913, 0.10789143]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 55
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 56,
       "id": "0f12525b",
       "metadata": {
@@ -768,13 +718,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 64,
       "id": "03dce2ff",
       "metadata": {
-        "id": "03dce2ff"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "03dce2ff",
+        "outputId": "dd08a717-b221-4e01-903f-1ae86a4e1718"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.4907298474780438\n"
+          ]
+        }
+      ],
+      "source": [
+        "x = np.random.random(30).reshape(10,3)\n",
+        "print(x.mean())"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -788,13 +753,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# for all matrix\n",
+        "size = 7\n",
+        "x = np.ones((size,size))\n",
+        "for x in range(size):\n",
+        "  x[1][]"
+      ],
+      "metadata": {
+        "id": "zZHxZSM6ijCH",
+        "outputId": "e46a53b5-1189-4129-c933-25da37aad058",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        }
+      },
+      "id": "zZHxZSM6ijCH",
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'numpy.ndarray' object has no attribute 'len'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-74-1823989280.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m   \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'len'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 69,
       "id": "0a811a3b",
       "metadata": {
-        "id": "0a811a3b"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0a811a3b",
+        "outputId": "75be2815-d47d-46db-bbfb-7d1a134d96bb"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 1., 1.],\n",
+              "       [1., 0., 1.],\n",
+              "       [1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ],
+      "source": [
+        "# for 3x3 matrix\n",
+        "x = np.ones((3,3))\n",
+        "x[1][1] = 0\n",
+        "x"
+      ]
     },
     {
       "cell_type": "markdown",
